# UGFX

./: .gitignore  CMakeLists.txt  README.md
Demo/: CMakeLists.txt
Demo/Source/: Main.cpp
Include/: Ugfx.hpp
Include/Ugfx/: Interfaces.hpp
Source/: Ugfx.cpp
Source/VulkanImpl/: VulkanGraphicsContext.cpp  VulkanTypes.hpp
